<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app_gradient"
    tools:context=".RankingActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/rankingToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginTop="@dimen/screen_margin"
        android:layout_marginEnd="@dimen/screen_margin"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/ranking_title"
        app:titleCentered="true"
        app:titleTextColor="@color/on_toolbar" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/screen_margin"
        android:queryHint="@string/search_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rankingToolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rankingList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/screen_margin"
        android:layout_marginBottom="@dimen/screen_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        tools:listitem="@layout/item_ranking" />

    <TextView
        android:id="@+id/emptyView"
        style="@style/Widget.Puzzle.Status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/screen_margin"
        android:gravity="center"
        android:text="@string/ranking_empty"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
